# agent-memory

./: .gitignore  README.md  install.sh  pyproject.toml
integrations/claude-code/: CLAUDE.md
integrations/claude-code/hooks/: agent-memory-hooks.json
integrations/claude-code/rules/: agent-memory.md
integrations/claude-code/skills/agent-memory/: SKILL.md
integrations/opencode/: SKILL.md
integrations/opencode/hooks/: agent-memory-hook.mjs
integrations/opencode/rules/: agent-memory.md
integrations/opencode/skills/agent-memory/: SKILL.md
src/agent_memory/: __init__.py  cli.py  compaction.py  config.py  event_log.py  groups.py  llm.py  pruning.py  relevance.py  session.py  store.py  update_check.py  utils.py  vector_store.py  web.py
src/agent_memory/embeddings/: __init__.py  base.py  claude.py  vertex.py
src/agent_memory/templates/: index.html
tests/: conftest.py  test_access_tracking.py  test_config.py  test_descendants.py  test_event_log.py  test_hook.py  test_session.py  test_session_analyze.py  test_store.py  test_usage.py  test_utils.py
